--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,42 @@
 .DS_Store
-*.pyc
+*.py[cod]
+
+*.tif
+*.tiff
+examples
+
+*.bak
+# C extensions
+*.so
+
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+__pycache__
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
