--- a/docs/Makefile
+++ b/docs/Makefile
@@ -5,7 +5,7 @@
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
-BUILDDIR      = ../docs-output/html
+BUILDDIR      = ./out
 PDFBUILDDIR = /tmp
 PDF = ../manual.pdf
 
@@ -22,10 +22,6 @@ ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 
 .PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest gettext
-
-buildall: html
-	@echo "Worked!"
-	cd $(BUILDDIR); git add . ; git commit -m "rebuilt docs"; git push origin gh-pages
 
 help:
 	@echo "Please use \`make <target>' where <target> is one of"
